Tue Apr 29 00:14:00 BST 2003  Olly Betts <olly@survex.com>

	* INSTALL: Updated.

Wed Apr 23 14:31:51 BST 2003  Olly Betts <olly@survex.com>

	* api/omtermlistiterator.cc,api/omtermlistiteratorinternal.h,
	  api/omvalueiteratorinternal.h,backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_positionlist.cc,
	  common/inmemory_positionlist.h: Added InMemoryPositionList ctor
	  which takes the positions data to avoid needing to construct and
	  immediately call set_data().

Wed Apr 23 14:14:34 BST 2003  Olly Betts <olly@survex.com>

	* api/,backends/,common/,include/,matcher/: OmPositionListIterator
	  -> Xapian::PositionListIterator, etc.

Wed Apr 23 13:47:49 BST 2003  Olly Betts <olly@survex.com>

	* xapian.spec.in: Minor tweaks.

Sun Apr 20 22:55:04 BST 2003  Olly Betts <olly@survex.com>

	* extra/omparsequery.h,include/xapian/stem.h,tests/api_db.cc,
	  tests/api_nodb.cc,tests/api_posdb.cc,testsuite/backendmanager.cc:
	  OmStem -> Xapian::Stem; OmExpandDecider -> Xapian::ExpandDecider.

Sun Apr 20 22:52:42 BST 2003  Olly Betts <olly@survex.com>

	* configure.in,api/omenquire.cc,common/expand.h,
	  common/omenquireinternal.h,docs/overview.html,include/,
	  matcher/expand.cc,tests/api_db.cc: OmExpandDecider ->
	  Xapian::ExpandDecider, etc.

Sun Apr 20 22:42:32 BST 2003  Olly Betts <olly@survex.com>

	* PLATFORMS,api/,backends/,common/,docs/,include/,matcher/,net/,
	  netprogs/,tests/,testsuite/: OmError -> Xapian::Error, etc.

Fri Apr 18 22:40:31 BST 2003  Sam Liddicott <sam@liddicott.com>

	* matcher/multimatch.cc: Fixed so that it updates the OmMSetItem in
	  the MSet with the collapse_count from the OmMSetItem twin in
	  collapse_tab or we lose collapse_count if newer collapsing hits are
	  less relevant than the hits they collapse over.  I think we need
	  collapse_tab maybe to keep a reference to the item in the mset?  But
	  this works for now.
	* xapian.spec.in: Fixed to also install include/xapian stuff 
